# basement-cowboy

./: .env  .env.template  .gitignore  CI_CD_GUIDE.md  CLEANUP_COMPLETE.md  CLEANUP_SUMMARY.md  DEPLOYMENT_GUIDE.md  Dockerfile  PRODUCTION_CHECKLIST.md  PRODUCTION_GUIDE.md  PRODUCTION_READY.md  QUICK_START.md  README.md  SHIPPING_TEST.md  TECHNICAL_BRIEF.md  USER_GUIDE.md  WORDPRESS_GRAPHQL_GUIDE.md  WP_ENGINE_QUICK_SETUP.md  WP_ENGINE_SETUP.md  check_front_page.py  create_shipping_package.py  debug_json_output.json  debug_scraper.py  debug_selection.py  deploy.py  design_improvements.md  diagnose_wp_images.py  direct_test.py  docker-compose.yml  fix_front_page.py  interface_implementation_plan.md  project-layout.txt  pyproject.toml  requirements.txt  run.py  setup-windows.bat  setup.cfg  setup.py  setup_wp_engine.py  start-cowboy.bat  (+18 more)
.github/: copilot-instructions.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: auto-release.yml  ci-cd.yml  code-quality.yml  docker.yml  tests.yml
app/: routes - Copy.py  routes.py  wordpress_graphql.py
app/models/: __init__.py  api.py  article.py  config.py  cost.py  ranking.py  seo.py  session.py  wordpress.py
app/services/: __init__.py  article_service.py  cache_service.py  openai_service.py  ranking_service.py  scraper_service.py  seo_service.py  storage_service.py  wordpress_service.py
app/static/: scripts.js  styles-improved.css  styles.css
app/static/css/components/: article-card.css  buttons.css  forms.css
app/static/js/: api-client.js  article-manager.js
app/templates/: api_key_form.html  details-improved.html  details-modern.html  details.html  published_success.html  review-backup.html  review.html
app/templates/components/: article_card.html  filter_toolbar.html  header_psychedelic.html  loading_spinner.html  modal_dialog.html  stats_dashboard.html  toast_notification.html
app/utils/: __init__.py  constants.py  dates.py  exceptions.py  http.py  logging.py  text.py  validators.py
basement-cowboy-shipping/: .env.template  SHIPPING_CHECKLIST.md  SHIPPING_INFO.json  requirements.txt  setup-unix.sh
basement-cowboy-shipping/app/: routes.py  seo_generator.py
basement-cowboy-shipping/app/static/: scripts.js  styles.css
basement-cowboy-shipping/app/templates/: details.html
basement-cowboy-shipping/config/: categories.json  wordpress_config.json.template
basement-cowboy-shipping/scraper/: ai_enhancements.py  fetch_page.py  parse_articles.py
basement-cowboy-shipping/tests/: test_basic.py  test_cloudflare_bypass.py
config/: top_100_news_sites - Copy.txt  top_100_news_sites.txt  wordpress_config.json
config/environments/: development.json  production.json  testing.json
data/: prompts.json
docs/: API.md  ARCHITECTURE.md  CONTRIBUTING.md  DEPLOYMENT.md  SETUP.md  TROUBLESHOOTING.md
mercor/: Basement-Cowboy-Setup-and-Run.md  Daily-Scrape-Checklist.md
mercor/config/: .env.example  news_sources_sample.txt  wordpress_config.json.template
output/news_articles/: news_articles_2024-12-31_13-13-01.json  news_articles_2025-09-09-1.json  news_articles_2025-09-09-2.json  news_articles_2025-09-09-3.json
output/wordpress-output/: .gitkeep  grouped_articles.json  selected_articles.json
scraper/: dynamic_scraper.py  filter_articles.py  main.py  scrape_news.py
scripts/: __init__.py  check_health.py  cleanup_old_articles.py  export_articles.py  manage_sources.py  setup_wizard.py
tests/: __init__.py  conftest.py  pytest_configure.py  test_app_config.py  test_basic.py  test_graphql_wordpress.py  test_wordpress_connection.py  test_wordpress_improved.py
tests/fixtures/: __init__.py  sample_articles.py
tests/integration/: __init__.py  test_scrape_to_rank_pipeline.py
tests/unit/: __init__.py  test_article_model.py  test_article_service.py  test_cache_service.py  test_date_utils.py  test_exceptions.py  test_http_utils.py  test_ranking_model.py  test_ranking_service.py  test_seo_model.py  test_seo_service.py  test_storage_service.py  test_text_utils.py  test_validators.py  test_wordpress_model.py
